--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "axios": "^0.23.0",
     "express": "^4.17.1",
+    "firebase": "^9.2.0",
+    "firebase-admin": "^10.0.0",
     "helmet": "^4.6.0"
   },
   "devDependencies": {
