--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@firebase/firestore": "^3.4.2",
     "@types/axios": "^0.14.0",
     "axios": "^0.23.0",
     "express": "^4.17.1",
     "firebase": "^9.2.0",
-    "firebase-admin": "^10.0.0",
-    "helmet": "^4.6.0"
+    "firebase-admin": "^10.0.1",
+    "helmet": "^4.6.0",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
