--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .envrc
+private_key.json
 # Created by https://www.toptal.com/developers/gitignore/api/vim,visualstudiocode,macos,windows,linux,node,intellij,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,visualstudiocode,macos,windows,linux,node,intellij,go
 
